# secure-doc-viewer

./: .env.example  .gitignore  Cargo.toml  README.md  config.toml  docker-compose.yml
.github/workflows/: deploy.yml
ansible/: deploy.yml  inventory.yml
ansible/group_vars/: all.yml
ansible/roles/caddy/tasks/: main.yml
ansible/roles/docsend/handlers/: main.yml
ansible/roles/docsend/tasks/: main.yml
ansible/roles/firewall/tasks/: main.yml
ansible/roles/postgres/tasks/: main.yml
ansible/templates/: Caddyfile.j2  config.toml.j2  docsend.service.j2
data/: blocklist.txt
migrations/: 001_init.sql
src/: Makefile  auth.rs  blocklist.rs  db.rs  lib.rs  main.rs  types.rs
src/routes/: admin.rs  export.rs  mod.rs  public.rs
static/: admin-login.html  admin.html  blocked.html  check-email.html  expired.html  form.html  viewer.html
tests/: api_test.rs  blocklist_test.rs  db_module_test.rs  db_test.rs  http_test.rs  integration_test.rs  real_server_test.rs
tests/common/: mod.rs
