[package]
name = "docsend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "limit", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Auth
argon2 = "0.5"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
rand = "0.8"

# Email
resend-rs = "0.19"
reqwest = { version = "0.12", features = ["json"] }

# Env
dotenvy = "0.15"

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", features = ["json", "multipart"] }
rand = "0.8"
argon2 = "0.5"
axum = { version = "0.8", features = ["multipart"] }
tower-http = { version = "0.6", features = ["cors"] }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }

[lib]
name = "docsend"
path = "src/lib.rs"

[[bin]]
name = "docsend"
path = "src/main.rs"

[[bin]]
name = "docsend-admin"
path = "src/bin/create_admin.rs"
